2017-08-29  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* makejvf.1: Updated manual based on version 20170828.

2017-08-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	makejvf version 20170828.
	Largely contributed by H. Yamashita-san.
	* usrtable.[ch]: New files to support a configuration file.
	* main.c, write.c, uniblock.[ch], makejvf.h: Support a configuration file.
	* Makefile.{am,in}: Add usrtable.[ch].
	* version.h: Bump version.

2017-08-01  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	makejvf version 20170801.
	* write.c: Simplify code, add more hankaku characters.
	* version.h: Bump version.

2017-07-31  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	makejvf version 20170731.
	* tfmread.c: Support large GLUEKERN table.
	* write.c: Add support for 0x00AB and 0x00BB in writevfu().
	* version.h: Bump version.

2017-07-24  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* tfmread.c, makejvf.h: More efficient code. Note that
	GLUEKERN table parser is still not working for nl > 255.

2017-07-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* write.c: Trivial change to avoid round-off error in
	tmin10.vf test on i386 environment. Report from Mojca:
	http://tug.org/pipermail/tlbuild/2017q3/003866.html

2017-07-20  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	makejvf version 20170720.
	* tfmread.c, makejvf.h: Declare "rightamount" as signed,
	to be consistent with "skip" in write.c.
	* write.c: Improve -m option for UCS mode.
	* version.h: Bump version.
	* makejvf.1: Add documentation of -m option.

2017-07-17  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	makejvf version 20170717.
	* Makefile.am: Add version.h.
	* main.c: Move version declaration to version.h.
	* makejvf.h, tfmread.c, write.c: Improve enhanced mode;
	More compatible with normal mode, by reading glue/kern table
	more deliberately.
	* version.h: Added.
	* makejvf.1: Update.

2017-07-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
